--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a tinyURL app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx mocha",
     "start": "npx nodemon -L express_server.js"
   },
   "repository": {
